# youngwb-financial-analysis

./: .gitignore  README.md  ai.py  financial_analysis.md  pyproject.toml
src/youngwb/: crew.py  financial_analysis.py  main.py
src/youngwb/config/: agents.yaml  tasks.yaml
src/youngwb/tools/: custom_tool.py
